--- a/CallInDoor/CallInDoor/Controllers/ProfilesController.en-US.resx
+++ b/CallInDoor/CallInDoor/Controllers/ProfilesController.en-US.resx
@@ -117,22 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CountryCode" xml:space="preserve">
-    <value>کد کشور</value>
+  <data name="Bad Image Format" xml:space="preserve">
+    <value>Photo format is not acceptable</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>رمز عبور</value>
-  </data>
-  <data name="PhoneNumber" xml:space="preserve">
-    <value>شماره موبایل</value>
-  </data>
-  <data name="The maximum {0} length is {1} characters" xml:space="preserve">
-    <value> حدا کثر تعداد کاراکتر برای {0} {1} میباشد</value>
-  </data>
-  <data name="The minimum {0} length is {1} characters" xml:space="preserve">
-    <value>حداقل تعداد کاراکتر برای {0} {1} میباشد</value>
-  </data>
-  <data name="{0} is  Required" xml:space="preserve">
-    <value>{0} الزامیست</value>
+  <data name="File Is Too Large" xml:space="preserve">
+    <value>Image is too large</value>
   </data>
 </root>
