--- a/CallInDoor/CallInDoor/Controllers/ProfilesController.fa-IR.resx
+++ b/CallInDoor/CallInDoor/Controllers/ProfilesController.fa-IR.resx
@@ -117,31 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConfirmPhoneMessage" xml:space="preserve">
-    <value>لطفا حساب کاربری خود را تایید </value>
+  <data name="Bad Image Format" xml:space="preserve">
+    <value>فرمت عکس نادرست است</value>
   </data>
-  <data name="ErrorMessage" xml:space="preserve">
-    <value>خطا در ثبت</value>
-  </data>
-  <data name="InternalServerMessage" xml:space="preserve">
-    <value>خطایی رخ داده است</value>
-  </data>
-  <data name="InvalidPhoneNumber" xml:space="preserve">
-    <value>شماره موبایل صحیح نمیباشد</value>
-  </data>
-  <data name="NotFound" xml:space="preserve">
-    <value>نتیجه ایی یافت نشد</value>
-  </data>
-  <data name="PhoneNumber  already  exist." xml:space="preserve">
-    <value>شماره موبایل  تکراریست</value>
-  </data>
-  <data name="SuccessMessage" xml:space="preserve">
-    <value>ثبت موفقیت آمیز</value>
-  </data>
-  <data name="UnauthorizedMessage" xml:space="preserve">
-    <value>عدم دسترسی</value>
-  </data>
-  <data name="UnMathPhoneNumberPassword" xml:space="preserve">
-    <value>رمز عبور یا  شماره موبایل صحیح نمی باشد.</value>
+  <data name="File Is Too Large" xml:space="preserve">
+    <value>حجم عکس زیاد است</value>
   </data>
 </root>
