--- a/CallInDoor/Domain/DTO/Service/AddServiceServiceForUsersDTO.fa-IR.resx
+++ b/CallInDoor/Domain/DTO/Service/AddServiceServiceForUsersDTO.fa-IR.resx
@@ -117,17 +117,50 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CountryCode" xml:space="preserve">
-    <value>کد کشور</value>
+  <data name="CustomTags" xml:space="preserve">
+    <value>برچسب های اختصاصی</value>
   </data>
-  <data name="PhoneNumber" xml:space="preserve">
-    <value>شماره موبایل</value>
+  <data name="DeliveryItems" xml:space="preserve">
+    <value>نحوه تحویل</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>تضیحات</value>
+  </data>
+  <data name="FileDescription" xml:space="preserve">
+    <value>توضیحات فایل</value>
+  </data>
+  <data name="HowWorkConducts" xml:space="preserve">
+    <value>نحوه انجام کار</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>قیمت</value>
+  </data>
+  <data name="Service" xml:space="preserve">
+    <value>نوع سرویس</value>
+  </data>
+  <data name="ServiceName" xml:space="preserve">
+    <value>نام سرویس</value>
+  </data>
+  <data name="ServiceType" xml:space="preserve">
+    <value>تایپ سرویس</value>
+  </data>
+  <data name="Tags" xml:space="preserve">
+    <value>برچسب ها</value>
+  </data>
+  <data name="The  {0} should be between {1} and {2}" xml:space="preserve">
+    <value>مقدار {0} باید بین{1} و {2} باشد</value>
   </data>
   <data name="The maximum {0} length is {1} characters" xml:space="preserve">
-    <value> حدا کثر تعداد کاراکتر برای {0} {1} است</value>
+    <value> حدا کثر تعداد کاراکتر برای {0} {1} میباشد</value>
   </data>
   <data name="The minimum {0} length is {1} characters" xml:space="preserve">
-    <value>حداقل تعداد کاراکتر برای {0} {1} است</value>
+    <value>حداقل تعداد کاراکتر برای {0} {1} میباشد</value>
+  </data>
+  <data name="UserName" xml:space="preserve">
+    <value>نام کاربری</value>
+  </data>
+  <data name="WorkDeliveryTimeEstimation" xml:space="preserve">
+    <value>برآورد زمان تحویل کار</value>
   </data>
   <data name="{0} is  Required" xml:space="preserve">
     <value>{0} الزامیست</value>
