--- a/CallInDoor/Domain/DTO/Service/AddCourseServiceForUsersDTO.fa-IR.resx
+++ b/CallInDoor/Domain/DTO/Service/AddCourseServiceForUsersDTO.fa-IR.resx
@@ -117,16 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AfterAdminConfirmMessage" xml:space="preserve">
-    <value>Failure to changes service. This service is approved by the admin</value>
+  <data name="Category" xml:space="preserve">
+    <value>دسته بندی</value>
   </data>
-  <data name="DeleteServiceMessage" xml:space="preserve">
-    <value>Service deleted successfully</value>
+  <data name="Description" xml:space="preserve">
+    <value>توضیحات</value>
   </data>
-  <data name="FileUploadErrorMessage" xml:space="preserve">
-    <value>There was a problem uploading the file</value>
+  <data name="DisCountPercent" xml:space="preserve">
+    <value>درصد تخفیف</value>
   </data>
-  <data name="SuccesfullAddServiceMessage" xml:space="preserve">
-    <value>Your service has been successfully registered. After admin approval will be displayed on the site</value>
+  <data name="NewCategory" xml:space="preserve">
+    <value>دسته بندی جدید</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>قیمت</value>
+  </data>
+  <data name="Service" xml:space="preserve">
+    <value>نوع سرویس</value>
+  </data>
+  <data name="ServiceName" xml:space="preserve">
+    <value>نام سرویس</value>
+  </data>
+  <data name="ServiceType" xml:space="preserve">
+    <value>تایپ سرویس</value>
+  </data>
+  <data name="The maximum {0} length is {1} characters" xml:space="preserve">
+    <value> حدا کثر تعداد کاراکتر برای {0} {1} میباشد</value>
+  </data>
+  <data name="The minimum {0} length is {1} characters" xml:space="preserve">
+    <value>حداقل تعداد کاراکتر برای {0} {1} میباشد</value>
+  </data>
+  <data name="The {0} range is valid" xml:space="preserve">
+    <value>مقدار {0} نامعتبر است</value>
+  </data>
+  <data name="TotalLenght" xml:space="preserve">
+    <value>طول دوره</value>
+  </data>
+  <data name="UserName" xml:space="preserve">
+    <value>نام کاربری</value>
+  </data>
+  <data name="{0} is  Required" xml:space="preserve">
+    <value>{0} الزامیست</value>
   </data>
 </root>
