going to finishe forget password

--- a/CallInDoor/Domain/DTO/Account/ChangePasswordDTO.en-US.resx
+++ b/CallInDoor/Domain/DTO/Account/ChangePasswordDTO.en-US.resx
@@ -117,37 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConfirmPhoneMessage" xml:space="preserve">
-    <value>Please confirm Your Account</value>
+  <data name="CurrentPassword" xml:space="preserve">
+    <value>Current Password </value>
   </data>
-  <data name="ErrorMessage" xml:space="preserve">
-    <value>Operation Failed</value>
+  <data name="NewPassword" xml:space="preserve">
+    <value>New Password</value>
   </data>
-  <data name="InCorrectPassword" xml:space="preserve">
-    <value>InCorrect Password</value>
+  <data name="The maximum {0} length is {1} characters" xml:space="preserve">
+    <value>The maximum {0} length is {1} characters</value>
   </data>
-  <data name="InternalServerMessage" xml:space="preserve">
-    <value>Sth went wrong</value>
+  <data name="The minimum {0} length is {1} characters" xml:space="preserve">
+    <value>The minimum {0} length is {1} characters</value>
   </data>
-  <data name="InvalidPhoneNumber" xml:space="preserve">
-    <value>Invalid Phone number</value>
-  </data>
-  <data name="LockedOutMessage" xml:space="preserve">
-    <value>User account locked out</value>
-  </data>
-  <data name="NotFound" xml:space="preserve">
-    <value>Not Found</value>
-  </data>
-  <data name="PhoneNumber  already  exist." xml:space="preserve">
-    <value>PhoneNumber  already  exist.</value>
-  </data>
-  <data name="SuccessMessage" xml:space="preserve">
-    <value>Successful Submit</value>
-  </data>
-  <data name="UnauthorizedMessage" xml:space="preserve">
-    <value>You are  Unauthorized</value>
-  </data>
-  <data name="UnMathPhoneNumberPassword" xml:space="preserve">
-    <value>Invalid phone number or password.</value>
+  <data name="{0} is  Required" xml:space="preserve">
+    <value>{0} is  Required</value>
   </data>
 </root>
