--- a/CallInDoor/Domain/ShareResource.en-US.resx
+++ b/CallInDoor/Domain/ShareResource.en-US.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BlockUserMessage" xml:space="preserve">
+    <value>Your account has been locked by admin</value>
+  </data>
   <data name="ConfirmPhoneMessage" xml:space="preserve">
     <value>Please confirm Your Account</value>
   </data>
