--- a/CallInDoor/Domain/ShareResource.fa-IR.resx
+++ b/CallInDoor/Domain/ShareResource.fa-IR.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BlockUserMessage" xml:space="preserve">
+    <value>حساب کاربری شما قفل شده است</value>
+  </data>
   <data name="ConfirmPhoneMessage" xml:space="preserve">
     <value>لطفا حساب کاربری خود را تایید </value>
   </data>
