--- a/CallInDoor/Service/AccountService.en-US.resx
+++ b/CallInDoor/Service/AccountService.en-US.resx
@@ -118,13 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="FileIsTooLarge" xml:space="preserve">
-    <value>File Is Too Large</value>
+    <value>File Is too large</value>
   </data>
   <data name="InValid verification Code" xml:space="preserve">
-    <value>InValid verification Code</value>
+    <value>InValid verification code</value>
+  </data>
+  <data name="InValidFileFormat" xml:space="preserve">
+    <value>Invalid file format</value>
+  </data>
+  <data name="InValidGender" xml:space="preserve">
+    <value>Invalid Gende</value>
   </data>
   <data name="InValidImageFormat" xml:space="preserve">
-    <value>Invalid Image Format</value>
+    <value>Invalid Image format</value>
+  </data>
+  <data name="InvalidServiceType" xml:space="preserve">
+    <value>Invalid service type</value>
+  </data>
+  <data name="InValidVideoFormat" xml:space="preserve">
+    <value>Invalid video format</value>
   </data>
   <data name="this account Is Confirmed" xml:space="preserve">
     <value>This account has already been verified</value>
