--- a/CallInDoor/Service/AccountService.fa-IR.resx
+++ b/CallInDoor/Service/AccountService.fa-IR.resx
@@ -117,14 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="FileIsRequired" xml:space="preserve">
+    <value>فایل الزامیست</value>
+  </data>
   <data name="FileIsTooLarge" xml:space="preserve">
     <value>حجم فایل زیاد است</value>
   </data>
   <data name="InValid verification Code" xml:space="preserve">
     <value>کد فعالسازی صحیح نمیباشد</value>
   </data>
+  <data name="InValidFileFormat" xml:space="preserve">
+    <value>فرمت فایل نامعتیبر است</value>
+  </data>
+  <data name="InValidGender" xml:space="preserve">
+    <value>جنسیت نامعتبر است</value>
+  </data>
   <data name="InValidImageFormat" xml:space="preserve">
     <value>فرمت عکس نامعتبر است</value>
+  </data>
+  <data name="InvalidServiceType" xml:space="preserve">
+    <value>نوع سرویس نامعتبر</value>
+  </data>
+  <data name="InValidVideoFormat" xml:space="preserve">
+    <value>فرمت ویدیو نامعتبر است</value>
   </data>
   <data name="this account Is Confirmed" xml:space="preserve">
     <value>این حساب از قبل تایید شده</value>
