--- a/CallInDoor/Service/AccountService.en-US.resx
+++ b/CallInDoor/Service/AccountService.en-US.resx
@@ -138,6 +138,9 @@
   <data name="InValidVideoFormat" xml:space="preserve">
     <value>Invalid video format</value>
   </data>
+  <data name="Service Is required" xml:space="preserve">
+    <value>Service Tye iS Required</value>
+  </data>
   <data name="this account Is Confirmed" xml:space="preserve">
     <value>This account has already been verified</value>
   </data>
