--- a/CallInDoor/Service/AccountService.fa-IR.resx
+++ b/CallInDoor/Service/AccountService.fa-IR.resx
@@ -141,6 +141,9 @@
   <data name="InValidVideoFormat" xml:space="preserve">
     <value>فرمت ویدیو نامعتبر است</value>
   </data>
+  <data name="Service Is required" xml:space="preserve">
+    <value>نوع سرویبس الزامیست</value>
+  </data>
   <data name="this account Is Confirmed" xml:space="preserve">
     <value>این حساب از قبل تایید شده</value>
   </data>
