--- a/CallInDoor/Domain/DTO/Company/requestCompany.en-US.resx
+++ b/CallInDoor/Domain/DTO/Company/requestCompany.en-US.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CompanyUserName" xml:space="preserve">
+    <value>company userame</value>
+  </data>
   <data name="ServiceCategoryId" xml:space="preserve">
     <value>service category </value>
   </data>
