--- a/CallInDoor/Domain/ShareResource.en-ca.resx
+++ b/CallInDoor/Domain/ShareResource.en-ca.resx
@@ -162,6 +162,9 @@
   <data name="InvalidDiscountCode" xml:space="preserve">
     <value>invalid discount code</value>
   </data>
+  <data name="InvalidInput" xml:space="preserve">
+    <value>Invalid Input</value>
+  </data>
   <data name="InvalidPackageType" xml:space="preserve">
     <value>invalid package type</value>
   </data>
