--- a/CallInDoor/Domain/ShareResource.fa-IR.resx
+++ b/CallInDoor/Domain/ShareResource.fa-IR.resx
@@ -159,6 +159,9 @@
   <data name="InvalidDiscointCode" xml:space="preserve">
     <value>کد تخفیف نامعتبر است</value>
   </data>
+  <data name="InvalidInput" xml:space="preserve">
+    <value>ورودی نامعتبر است</value>
+  </data>
   <data name="InvalidPackageType" xml:space="preserve">
     <value>نامعتبر</value>
   </data>
